Added restart_time, restart_message variables to settings.json
Signed-off-by: Lev Rusanov <30170278+JDM170@users.noreply.github.com>

--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,6 @@
 {
+    "restart_time": 60,
+    "restart_message": "Плановая перезагрузка компьютера через 1 минуту!",
     "pc" : {
         "2" : [
             "IT01",
